k8s-manifests/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels: 
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 857874856616.dkr.ecr.ap-south-1.amazonaws.com/auth-service:latest
          ports:
            - containerPort: 5000
