k8s-manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific   
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /product(/|$)(.*)
            pathType: ImplementationSpecific
            backend:  
              service:  
                name: product-service
                port: 
                  number: 80

          - path: /cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend: 
              service:  
                name: cart-service
                port:
                  number: 80
          
          - path: /order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
            service:
              name: order-service
              port:
                number: 80
